secretspec-derive/tests/ui/file_not_found.stderr
error: Failed to parse TOML: I/O error: Failed to resolve path $WORKSPACE/target/tests/trybuild/secretspec-derive/this/file/does/not/exist.toml: No such file or directory (os error 2)
 --> tests/ui/file_not_found.rs:4:1
  |
4 | define_secrets!("this/file/does/not/exist.toml");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `define_secrets` (in Nightly builds, run with -Z macro-backtrace for more info)
